--- a/LiteTorrent/UserInterface/WebUI/ui/public/index.html
+++ b/LiteTorrent/UserInterface/WebUI/ui/public/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>LiteTorrent</title>
-    <div>LiteTorrent</div>
-    <button>Add Torrent</button>
-    <button>Remove Torrent</button>
-    <Navbar/>
   </head>
   <body>
-    Lorem ipsum, dolor sit amet conse3456789
+    <div id="root"></div>
   </body>
 </html>
